# StarPath

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start.ps1
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: schemas.py
backend/app/api/v1/routes/: calculate.py  ephemerides.py  presets.py  tasks.py  vehicles.py
backend/app/cache/: redis_cache.py
backend/app/core/: calculation_mode.py  config.py  exceptions.py  types.py
backend/app/czml/: builder.py  simplify.py
backend/app/engine/: base.py  body_constants.py  ephemerides.py  ephemerides_horizons.py  flyby.py  frames.py  gravity_assist.py  launch_windows.py  leg_budget.py  mission.py  multileg.py  optimizers.py  poliastro_engine.py  porkchop.py  vehicle.py
backend/app/tasks/: calculate.py  celery_app.py  worker.py
backend/backend/data/czml/: 253cb2cc-4b70-4afe-82a4-9742c2c78a6a_balanced.czml  253cb2cc-4b70-4afe-82a4-9742c2c78a6a_cheapest.czml  6301d38f-238a-41af-bb13-d8bf89363ae9_fastest.czml
backend/tests/: test_cache.py  test_calculation_mode.py  test_engine.py  test_flyby.py  test_gravity_assist_search.py  test_spikes.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/models/: README.md
frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: CalculationProgress.tsx  FlightControls.tsx  MissionForm.tsx  OnboardingTour.tsx  PlanetPicker.tsx  Scene.tsx  (+4 more)
nginx/: nginx.conf
scripts/: generate_starship_glb.py
(+33 files in other folders)
